--- a/marketJpa/build.gradle
+++ b/marketJpa/build.gradle
@@ -30,8 +30,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	//querydsl
-	implementation 'com.querydsl:querydsl-apt:5.0.0'
-	implementation 'com.querydsl:querydsl-jpa:5.0.0'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
 	//mysql
 	runtimeOnly 'com.mysql:mysql-connector-j'
@@ -56,4 +58,23 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+//https://velog.io/@pyo92/Spring-Querydsl-build.gradle-Spring-boot-3.0.0-%EC%9D%B4%EC%83%81
+//Querydsl Q Class 생성 위치
+def generated = 'src/main/generated'
+
+//Querydsl Q Class 생성 위치 지정
+tasks.withType(JavaCompile).configureEach {
+	options.getGeneratedSourceOutputDirectory().set(file(generated))
+}
+
+//java source set 에 Querydsl Q Class 위치 추가
+sourceSets {
+	main.java.srcDirs += [ generated ]
+}
+
+//gradle clean 시, Q Class 디렉토리까지 삭제하도록 설정
+clean {
+	delete file(generated)
 }
